--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
-{% extends "base.html" %}
+{% extends "bootstrap/base.html" %}
 {% import "bootstrap/wtf.html" as wtf %} 
-
-{% block title %} Flasky {% endblock %}
- 
+{% block title %}Flasky{% endblock %} 
 {% block page_content %}
 
 <div class = "page-header">
 	<h1>Hello, {% if name %}{{ name }}{% else %}Stranger{% endif %}!</h1>
-	<h1>{% if email %}You UofT email is {{ email }}{% else %}Please user you UofT email.{% endif %}</h1>
 </div>
 
 
